# gpu-broker

./: .gitignore  ACCEPTANCE_M3M4.md  MILESTONE_1_REPORT.md  MILESTONE_2_VERIFICATION.md  README.md  migrate2.sh  migrate_all.sh  migrate_comfyui.sh  migrate_lora.sh  pyproject.toml  setup.py
docs/: 2026-03-28-gpu-broker-design.md  gpu-broker-requirements.md  milestone-2-model-management.md
gpu_broker/: __init__.py  cli.py  config.py  daemon_main.py
gpu_broker/api/: app.py  schemas.py
gpu_broker/api/routes/: models.py  status.py  tasks.py
gpu_broker/db/: __init__.py  database.py
gpu_broker/engine/: __init__.py  engine.py
gpu_broker/models/: manager.py
gpu_broker/scheduler/: scheduler.py
gpu_broker/templates/: manager.py
gpu_broker/templates/builtin/: anime-illustration.yaml  asian-beauty.yaml  guofeng-portrait.yaml  realistic-photo.yaml
