[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-broker"
version = "0.1.0"
description = "GPU inference task broker with model management and scheduling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "pydantic>=2.5.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.1.0",
    "diffusers>=0.25.0",
    "transformers>=4.36.0",
    "accelerate>=0.25.0",
    "huggingface-hub>=0.20.0",
    "safetensors>=0.4.0",
    "Pillow>=10.0.0",
]

[project.scripts]
gpu-broker = "gpu_broker.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["gpu_broker*"]
